@@ -1,3 +1,7 @@
+Fri Mar 27 09:26:34 GMT 2009  Richard Boulton <richard@lemurconsulting.com>
+
+	* xappy/unittests/cluster.py: Add test for clustering.
+
 Fri Mar 27 08:29:08 GMT 2009  Richard Boulton <richard@lemurconsulting.com>
 
 	* utils/make_xappy_tarballs: Stop chasing a moving target - set the
